<resources>
    <string name="app_name">Community</string>
    <string name="title_activity_maps">Community</string>
    <string name="button_1">All Pins</string>
    <string name="button_2">Childcare</string>
    <string name="button_3">Community Centre</string>
    <string name="button_4">Cultural Sites</string>
    <string name="button_5">Dentist</string>
    <string name="button_6">Doctors Surgery</string>
    <string name="button_7">Education</string>
    <string name="button_8">Health</string>
    <string name="button_9">Hospital / A&amp;E</string>
    <string name="button_10">Library</string>
    <string name="button_11">Practical Life</string>
    <string name="button_12">Transport</string>
    <string name="button_13">Creative</string>
    <string name="button_14">Sports/Exercise</string>
    <string name="button_15">Social</string>
    <string name="button_16">Other</string>
    <string name="test_pop_up">Test Pop-Up</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="users">Users</string>
    <string name="centres">Centres</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="close">Close</string>
    <string name="users_registered">Users registered with you</string>
    <string name="training_centres">Training Centres you are registered with</string>
    <string name="new_training_centres">You have been added to the following Training Centre/s:</string>
    <string name="login_text1"><![CDATA[Project PONToon, Partnership Opportunities using New Technologies fostering sOcial and ecOnomic inclusioN 2017-2021, is a 5.8 million euro digital upskilling collaboration between participants in Southern England and Northern France. The project is 69% funded by the European Regional Development Fund, Interreg France (Channel) England programme and is delivered by 11 partners, The University of Portsmouth (lead), Amiens Métropole, Aspex, ADICE, Digital Peninsula Network, Devon Mind, Eastleigh Borough Council, GIP-FCIP de l\'académie de Caen, MEFP, TRAJECTIO and WSX Enterprise.<br><br>For more information please <a href=https://pontoonproject.eu/>click here</a>.<br><br>]]></string>
    <string name="login_text2"><![CDATA[If you don\'t have an account<br><a href=https://pontoonapps.com/signup.php>click here</a> to sign up]]></string>
    <string name="new_training_centre">New Training Centre</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="login_not_recognised">Login not recognised, please try again</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="failed_to_add">Failed to add, try again</string>
    <string name="retry">Retry</string>
    <string name="failed_to_post">Failed to post, try again</string>
    <string name="delete_failed">Delete failed, try again</string>
    <string name="couldnt_get_data">"Couldn't get data"</string>
    <string name="select_pin_category">"Select Pin Category"</string>
    <string name="keep_current">Keep Current</string>
    <string name="pin_actions">Pin Actions</string>
    <string name="directions">Directions</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_pin_here">Add Pin here?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_pin">Edit Pin</string>
    <string name="add_pin">Add Pin</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="postcode">Postcode</string>
    <string name="notes">Notes</string>
    <string name="update">Update</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
</resources>
