<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="false"
        android:focusable="false"
        android:textSize="16dip"
        android:gravity="center"
        android:textStyle="bold"  />

    <ListView
        android:layout_margin="30dp"
        android:id="@+id/mobile_list"
        android:layout_width="wrap_content"
        android:choiceMode="singleChoice"
        android:layout_height="200dp" >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:onClick="onClickAddButton"
            android:layout_gravity="left"
            android:text="@string/add" />

        <Button
            android:id="@+id/button_remove"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:onClick="onClickRemoveButton"
            android:layout_gravity="center"
            android:textColor="@color/warning_colorselector"
            android:text="@string/remove" />

        <Button
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:onClick="onClickCloseButton"
            android:layout_gravity="right"
            android:text="@string/close" />
    </LinearLayout>


</LinearLayout>