<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="24dp"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/dataview"
        tools:context="uk.co.tinraven.pontoonmap.MapsMarkerActivity">


        <LinearLayout
            android:id="@+id/buttonview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:onClick="onClickLoginButton"
            android:text="@string/login" />

        <Button
            android:id="@+id/button_users"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:onClick="onClickUsersButton"
            android:text="@string/users" />
        </LinearLayout>

    </fragment>

    <LinearLayout
        android:id="@+id/dataview"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_pincategory"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:onClick="selectViewCategory"
            android:text="@string/button_1" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:clickable="false"
            android:focusable="true" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:clickable="false"
            android:focusable="true" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:onClick="onClickAddress"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:onClick="onClickPhone"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:onClick="onClickURL"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:clickable="false"
            android:focusable="true" />
    </LinearLayout>

</RelativeLayout>